--- a/data/03_vs/03_vs.md
+++ b/data/03_vs/03_vs.md
@@ -8,8 +8,8 @@ October 11, 2024
 
 A large number of cells in the STARsolo matrix were filtered because of
 the high percentage of mitochondrial counts (\> 5%, see
-[before](../02_starsolo/02_starsolo_files/figure-gfm/violin1-1.png) and
-[after](../02_starsolo/02_starsolo_files/figure-gfm/violin2-1.png)). In
+[before](../02_starsolo/files/figure-gfm/violin1-1.png) and
+[after](../02_starsolo/files/figure-gfm/violin2-1.png)). In
 the gene transfer format (GTF) file, two duplicate lines were spotted.
 These two lines correspond to mitochondrial large ribosomal RNA (rrnL)
 and mitochondrial small ribosomal RNA (rrnS). After removing line 380742
@@ -54,7 +54,7 @@ ggplot(df_pc27, aes(xvalue, yvalue)) +
         panel.border = element_rect(linewidth = 1, color="black"), aspect.ratio = 1)
 ```
 
-![](03_vs_files/figure-gfm/knee-plot-1.png)<!-- -->
+![](files/figure-gfm/knee-plot-1.png)<!-- -->
 
 The plot indicates the top 8000 cells contribute nearly 30% of the total
 uniquely mapped reads.
@@ -99,7 +99,7 @@ ggplot()+
         panel.border = element_rect(linewidth = 1, color="black"), aspect.ratio = 1)
 ```
 
-![](03_vs_files/figure-gfm/barcodeRanks-1.png)<!-- -->
+![](files/figure-gfm/barcodeRanks-1.png)<!-- -->
 
 Cells below the knee point (5910) are considered empty droplets.
 
@@ -151,7 +151,7 @@ ggplot(e.out %>% as.data.frame() %>% filter(!is.na(LogProb)) %>% mutate(FDR_fill
         panel.border = element_rect(linewidth = 1, color="black"), aspect.ratio = 1)
 ```
 
-![](03_vs_files/figure-gfm/emptyDrops3-1.png)<!-- -->
+![](files/figure-gfm/emptyDrops3-1.png)<!-- -->
 
 The retained droplets (orange color) should have large UMI counts and/or
 large negative log probabilities.
@@ -173,7 +173,7 @@ each cell (left), the total number of unique genes in each cell
 (middle), and the percentage of reads mapped to the mitochondrial genome
 (right).
 
-![](03_vs_files/figure-gfm/violin1-1.png)<!-- -->
+![](files/figure-gfm/violin1-1.png)<!-- -->
 
 We further filtered cells (1) with feature counts larger than 2500 or
 less than 200 or (2) with mitochondrial counts larger than 5%.
@@ -186,7 +186,7 @@ so_pc27 <- CreateSeuratObject(counts = mtx_pc27, min.cells = 3, min.features = 2
 
 We checked the diagnostic plots after filtering.
 
-![](03_vs_files/figure-gfm/violin2-1.png)<!-- -->
+![](files/figure-gfm/violin2-1.png)<!-- -->
 
 UMAP clustering of data from 2587 cells revealed 7 cell clusters.
 
@@ -238,7 +238,7 @@ ggplot(df_umap) +
         panel.border = element_rect(linewidth = 1, color="black"), aspect.ratio = 1)
 ```
 
-![](03_vs_files/figure-gfm/umap-1.png)<!-- -->
+![](files/figure-gfm/umap-1.png)<!-- -->
 
 Genes differentially expressed among each cluster were selected as
 marker genes.
@@ -276,7 +276,7 @@ log2 fold-change value (avg_log2FC). We can visualize the marker gene
 expression (from left to right: top1, top2, top3; from top to bottom:
 cluster 0, 1, 2, 3, 4, 5 and 6).
 
-![](03_vs_files/figure-gfm/marker02-1.png)<!-- -->
+![](files/figure-gfm/marker02-1.png)<!-- -->
 
 We noticed only one marker gene (g5339 in cluster 0) on the list with
 the high adjusted *P*-value (p_val_adj), so we filtered genes with
@@ -311,7 +311,7 @@ so_pc27.markers %>% filter(p_val_adj < 0.05) %>% arrange(desc(avg_log2FC)) %>% g
 
 We can visualize the marker gene expression with filtered data.
 
-![](03_vs_files/figure-gfm/marker04-1.png)<!-- -->
+![](files/figure-gfm/marker04-1.png)<!-- -->
 
 The below table shows top10 marker genes in each cluster with inferred
 gene names derived from annotated reference genomes *Bombyx mori*,
